fixed nav alignment

--- a/src/documents/styles/_modules/header.scss
+++ b/src/documents/styles/_modules/header.scss
@@ -36,6 +36,7 @@ body.framed header
     {
         display: inline-block;
         margin-left: 5px;
+        margin-top: 10px;
         width: 240px;
         height: 48px;
         background: url(../images/layout/komodo-logo.png) no-repeat;
@@ -51,6 +52,7 @@ body.framed header
     {
         position: relative;
         float: right;
+        margin-top: 20px;
 
         & > ul
         {
